packages/java/src/main/resources/natives/macos-arm64/include/spikard.h

typedef uint64_t SPIKARDAlefHandle;
int32_t spikard_last_error_code(void);
const char *spikard_last_error_context(void);
void spikard_free_string(char *ptr);
int32_t spikard_cors_config_is_origin_allowed(SPIKARDAlefHandle this_,
                                              const char *origin);
int32_t spikard_cors_config_is_method_allowed(SPIKARDAlefHandle this_,
                                              const char *method);
SPIKARDAlefHandle spikard_problem_details_with_detail(SPIKARDAlefHandle this_,
                                                      const char *detail);
SPIKARDAlefHandle spikard_problem_details_with_instance(SPIKARDAlefHandle this_,
                                                        const char *instance);
SPIKARDAlefHandle spikard_problem_details_not_found(const char *detail);
SPIKARDAlefHandle
spikard_problem_details_method_not_allowed(const char *detail);
SPIKARDAlefHandle
spikard_problem_details_internal_server_error(const char *detail);
SPIKARDAlefHandle spikard_problem_details_bad_request(const char *detail);
char *spikard_problem_details_to_json_pretty(SPIKARDAlefHandle this_);
void spikard_response_set_header(SPIKARDAlefHandle this_, const char *key,
                                 const char *value);
void spikard_response_set_cookie(SPIKARDAlefHandle this_, const char *key,
                                 const char *value, int32_t secure,
                                 int32_t http_only, int64_t max_age,
                                 const char *domain, const char *path,
                                 const char *same_site);
SPIKARDAlefHandle spikard_route_builder_new(int32_t method, const char *path);
SPIKARDAlefHandle spikard_route_builder_handler_name(SPIKARDAlefHandle this_,
                                                     const char *name);
SPIKARDAlefHandle
spikard_route_builder_request_schema_json(SPIKARDAlefHandle this_,
                                          const char *schema);
SPIKARDAlefHandle
spikard_route_builder_response_schema_json(SPIKARDAlefHandle this_,
                                           const char *schema);
SPIKARDAlefHandle
spikard_route_builder_params_schema_json(SPIKARDAlefHandle this_,
                                         const char *schema);
SPIKARDAlefHandle
spikard_route_builder_file_params_json(SPIKARDAlefHandle this_,
                                       const char *schema);
SPIKARDAlefHandle spikard_route_builder_cors(SPIKARDAlefHandle this_,
                                             SPIKARDAlefHandle cors);
SPIKARDAlefHandle
spikard_route_builder_compression(SPIKARDAlefHandle this_,
                                  SPIKARDAlefHandle compression);
SPIKARDAlefHandle spikard_route_builder_body_limit(SPIKARDAlefHandle this_,
                                                   uintptr_t max_bytes);
SPIKARDAlefHandle spikard_route_builder_request_timeout(SPIKARDAlefHandle this_,
                                                        uint64_t seconds);
SPIKARDAlefHandle
spikard_route_builder_rate_limit(SPIKARDAlefHandle this_,
                                 SPIKARDAlefHandle rate_limit);
SPIKARDAlefHandle spikard_route_builder_request_id(SPIKARDAlefHandle this_,
                                                   int32_t enabled);
SPIKARDAlefHandle spikard_route_builder_jwt_auth(SPIKARDAlefHandle this_,
                                                 SPIKARDAlefHandle config);
SPIKARDAlefHandle spikard_route_builder_api_key_auth(SPIKARDAlefHandle this_,
                                                     SPIKARDAlefHandle config);
SPIKARDAlefHandle spikard_route_builder_authorization(SPIKARDAlefHandle this_,
                                                      SPIKARDAlefHandle config);
SPIKARDAlefHandle
spikard_route_builder_lifecycle_hooks(SPIKARDAlefHandle this_,
                                      SPIKARDAlefHandle hooks);
SPIKARDAlefHandle spikard_route_builder_jsonrpc_method(SPIKARDAlefHandle this_,
                                                       SPIKARDAlefHandle info);
SPIKARDAlefHandle spikard_route_builder_openrpc_spec(SPIKARDAlefHandle this_,
                                                     const char *spec);
SPIKARDAlefHandle spikard_route_builder_sync(SPIKARDAlefHandle this_);
SPIKARDAlefHandle
spikard_route_builder_handler_dependencies(SPIKARDAlefHandle this_,
                                           const char *dependencies);
SPIKARDAlefHandle spikard_sse_event_with_id(SPIKARDAlefHandle this_,
                                            const char *id);
SPIKARDAlefHandle spikard_sse_event_with_retry(SPIKARDAlefHandle this_,
                                               uint64_t retry_ms);
int32_t spikard_app_register_route(SPIKARDAlefHandle owner,
                                   char *(*callback)(void *, const char *),
                                   void (*response_free)(char *), void *context,
                                   SPIKARDAlefHandle builder);
int32_t spikard_app_get(SPIKARDAlefHandle owner,
                        char *(*callback)(void *, const char *),
                        void (*response_free)(char *), void *context,
                        const char *path);
int32_t spikard_app_post(SPIKARDAlefHandle owner,
                         char *(*callback)(void *, const char *),
                         void (*response_free)(char *), void *context,
                         const char *path);
int32_t spikard_app_put(SPIKARDAlefHandle owner,
                        char *(*callback)(void *, const char *),
                        void (*response_free)(char *), void *context,
                        const char *path);
int32_t spikard_app_patch(SPIKARDAlefHandle owner,
                          char *(*callback)(void *, const char *),
                          void (*response_free)(char *), void *context,
                          const char *path);
int32_t spikard_app_delete(SPIKARDAlefHandle owner,
                           char *(*callback)(void *, const char *),
                           void (*response_free)(char *), void *context,
                           const char *path);
int32_t spikard_app_head(SPIKARDAlefHandle owner,
                         char *(*callback)(void *, const char *),
                         void (*response_free)(char *), void *context,
                         const char *path);
int32_t spikard_app_options(SPIKARDAlefHandle owner,
                            char *(*callback)(void *, const char *),
                            void (*response_free)(char *), void *context,
                            const char *path);
int32_t spikard_app_connect(SPIKARDAlefHandle owner,
                            char *(*callback)(void *, const char *),
                            void (*response_free)(char *), void *context,
                            const char *path);
int32_t spikard_app_trace(SPIKARDAlefHandle owner,
                          char *(*callback)(void *, const char *),
                          void (*response_free)(char *), void *context,
                          const char *path);