packages/csharp/src/Spikard/NativeMethods.cs


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_cors_config_is_origin_allowed")]
    internal static extern int CorsConfigIsOriginAllowed(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string origin
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_cors_config_is_method_allowed")]
    internal static extern int CorsConfigIsMethodAllowed(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string method
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_response_set_header")]
    internal static extern void ResponseSetHeader(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string key,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string value
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_response_set_cookie")]
    internal static extern void ResponseSetCookie(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string key,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string value,
        [MarshalAs(UnmanagedType.U1)] bool secure,
        [MarshalAs(UnmanagedType.U1)] bool httpOnly,
        long maxAge,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string domain,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string path,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string sameSite
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_sse_event_with_id")]
    internal static extern IntPtr SseEventWithId(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string id
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_sse_event_with_retry")]
    internal static extern IntPtr SseEventWithRetry(
        IntPtr handle,
        ulong retryMs
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_route_builder_new")]
    internal static extern IntPtr RouteBuilderNew(
        IntPtr method,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string path
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_route_builder_handler_name")]
    internal static extern IntPtr RouteBuilderHandlerName(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_route_builder_request_schema_json")]
    internal static extern IntPtr RouteBuilderRequestSchemaJson(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string schema
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_route_builder_response_schema_json")]
    internal static extern IntPtr RouteBuilderResponseSchemaJson(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string schema
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_route_builder_params_schema_json")]
    internal static extern IntPtr RouteBuilderParamsSchemaJson(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string schema
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_route_builder_file_params_json")]
    internal static extern IntPtr RouteBuilderFileParamsJson(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string schema
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_route_builder_cors")]
    internal static extern IntPtr RouteBuilderCors(
        IntPtr handle,
        IntPtr cors
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_route_builder_compression")]
    internal static extern IntPtr RouteBuilderCompression(
        IntPtr handle,
        IntPtr compression
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_route_builder_body_limit")]
    internal static extern IntPtr RouteBuilderBodyLimit(
        IntPtr handle,
        ulong maxBytes
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_route_builder_request_timeout")]
    internal static extern IntPtr RouteBuilderRequestTimeout(
        IntPtr handle,
        ulong seconds
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_route_builder_rate_limit")]
    internal static extern IntPtr RouteBuilderRateLimit(
        IntPtr handle,
        IntPtr rateLimit
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_route_builder_request_id")]
    internal static extern IntPtr RouteBuilderRequestId(
        IntPtr handle,
        [MarshalAs(UnmanagedType.U1)] bool enabled
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_route_builder_jwt_auth")]
    internal static extern IntPtr RouteBuilderJwtAuth(
        IntPtr handle,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_route_builder_api_key_auth")]
    internal static extern IntPtr RouteBuilderApiKeyAuth(
        IntPtr handle,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_route_builder_authorization")]
    internal static extern IntPtr RouteBuilderAuthorization(
        IntPtr handle,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_route_builder_lifecycle_hooks")]
    internal static extern IntPtr RouteBuilderLifecycleHooks(
        IntPtr handle,
        IntPtr hooks
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_route_builder_jsonrpc_method")]
    internal static extern IntPtr RouteBuilderJsonrpcMethod(
        IntPtr handle,
        IntPtr info
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_route_builder_openrpc_spec")]
    internal static extern IntPtr RouteBuilderOpenrpcSpec(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string spec
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_route_builder_sync")]
    internal static extern IntPtr RouteBuilderSync(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_route_builder_handler_dependencies")]
    internal static extern IntPtr RouteBuilderHandlerDependencies(
        IntPtr handle,
        IntPtr dependencies
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_problem_details_with_detail")]
    internal static extern IntPtr ProblemDetailsWithDetail(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string detail
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_problem_details_with_instance")]
    internal static extern IntPtr ProblemDetailsWithInstance(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string instance
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_problem_details_not_found")]
    internal static extern IntPtr ProblemDetailsNotFound(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string detail
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_problem_details_method_not_allowed")]
    internal static extern IntPtr ProblemDetailsMethodNotAllowed(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string detail
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_problem_details_internal_server_error")]
    internal static extern IntPtr ProblemDetailsInternalServerError(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string detail
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_problem_details_bad_request")]
    internal static extern IntPtr ProblemDetailsBadRequest(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string detail
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_problem_details_to_json_pretty")]
    internal static extern IntPtr ProblemDetailsToJsonPretty(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_last_error_code")]
    internal static extern int LastErrorCode();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_last_error_context")]
    internal static extern IntPtr LastErrorContext();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_free_string")]
    internal static extern void FreeString(IntPtr ptr);

}
